force-app/main/default/objects/Job__c/fields/Active_Heyjobs_Product__c.field-meta.xml
<CustomField>
    <fullName>Active_Heyjobs_Product__c</fullName>
    <inlineHelpText>Zeigt Details zu den aktuellen Produkten, die die Kunden verwenden - REACH, HIRE</inlineHelpText>
    <label>Active Heyjobs Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reach</fullName>
            </value>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>