force-app/main/default/objects/Job__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>Stadt, in der die Stelle derzeit verfügbar ist</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>