force-app/main/default/objects/Job__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <formula>Account__r.txtCompanyId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>HeyJobs BE Unternehmens-ID für dieses Konto</inlineHelpText>
    <label>Company ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>