force-app/main/default/objects/Job__c/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <defaultValue>(NOW())</defaultValue>
    <inlineHelpText>Dieser Zeitstempel stellt den ersten Tag dar, an dem diese Stelle in einer unserer Quellen gefunden wurde. Das Feld sollte bei der Erstellung des Stellendatensatzes gesetzt werden</inlineHelpText>
    <label>Created On</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>