force-app/main/default/objects/Job__c/fields/Employment_type__c.field-meta.xml
<CustomField>
    <fullName>Employment_type__c</fullName>
    <inlineHelpText>Dies zeigt die Art der Beschäftigung: Vollzeit, Teilzeit, Vertrag</inlineHelpText>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>full-time</fullName>
            </value>
            <value>
                <fullName>part-time</fullName>
            </value>
            <value>
                <fullName>contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>