force-app/main/default/objects/Job__c/fields/Ingestion_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Ingestion_Job_ID__c</fullName>
    <description>UUID of the job details - mostly used for internal purposes.</description>
    <inlineHelpText>UUID of the job details - mostly used for internal purposes.</inlineHelpText>
    <label>Ingestion Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>