force-app/main/default/objects/Job__c/fields/Ingestion_Recruiter_ID__c.field-meta.xml
<CustomField>
    <fullName>Ingestion_Recruiter_ID__c</fullName>
    <description>UUID5 of the extract recruiter details (mainly used for internal purposes)</description>
    <inlineHelpText>UUID5 of the extract recruiter details (mainly used for internal purposes)</inlineHelpText>
    <label>Ingestion Recruiter ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>