force-app/main/default/objects/Job__c/fields/Job_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Job_Complexity__c</fullName>
    <label>Job Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>high</fullName>
            </value>
            <value>
                <fullName>mid</fullName>
            </value>
            <value>
                <fullName>low</fullName>
            </value>
            <value>
                <fullName>1_EASY</fullName>
            </value>
            <value>
                <fullName>2_MID</fullName>
            </value>
            <value>
                <fullName>3_HARD</fullName>
            </value>
            <value>
                <fullName>4_VERY HARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>