force-app/main/default/objects/Job__c/fields/Job_Marketing_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Job_Marketing_Complexity__c</fullName>
    <description>Indicates how complex it is to find applicants in that specific area.</description>
    <label>Job Marketing Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>high</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>low</fullName>
            </value>
            <value>
                <fullName>3_M</fullName>
            </value>
            <value>
                <fullName>1_XS</fullName>
            </value>
            <value>
                <fullName>5_XL</fullName>
            </value>
            <value>
                <fullName>4_L</fullName>
            </value>
            <value>
                <fullName>2_S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>