force-app/main/default/objects/Job__c/fields/Job_Name_long__c.field-meta.xml
<CustomField>
    <fullName>Job_Name_long__c</fullName>
    <label>Job Name (long)</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>