force-app/main/default/objects/Job__c/fields/Job_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Job_Revenue__c</fullName>
    <inlineHelpText>Umsatz berechnet durch Aggregation der Listenpreise aus den berücksichtigten Stellenquellen</inlineHelpText>
    <label>Job Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>