force-app/main/default/objects/Job__c/fields/Job_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_Source_ID__c</fullName>
    <inlineHelpText>ID der Quelle, in der die Stelle gefunden wurde (Inventory, Index, Jobboerse)</inlineHelpText>
    <label>Job Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>