force-app/main/default/objects/Job__c/fields/KLDB_Code__c.field-meta.xml
<CustomField>
    <fullName>KLDB_Code__c</fullName>
    <inlineHelpText>Stellencode aus der KLDB-Klassifikation gemäß den Inventory-Systemen</inlineHelpText>
    <label>KLDB Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>