force-app/main/default/objects/Job__c/fields/KLDB_Name__c.field-meta.xml
<CustomField>
    <fullName>KLDB_Name__c</fullName>
    <inlineHelpText>Dies zeigt den Namen der KLDB-Klassifikation</inlineHelpText>
    <label>KLDB Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>