force-app/main/default/objects/Job__c/fields/Last_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_On__c</fullName>
    <description>Last time the job was found and the job details were updated by merging existing with new records.</description>
    <inlineHelpText>Last time the job was found and the job details were updated by merging existing with new records.</inlineHelpText>
    <label>Last Updated On</label>
    <type>DateTime</type>
</CustomField>