force-app/main/default/objects/Job__c/fields/Link_Advert__c.field-meta.xml
<CustomField>
    <fullName>Link_Advert__c</fullName>
    <inlineHelpText>Dies ist der Link zur Anzeige, der von der Stellenquelle bereitgestellt wird. Dieser kann manchmal leer sein, insbesondere bei internen Quellen wie Inventory.</inlineHelpText>
    <label>Link Advert</label>
    <type>Url</type>
</CustomField>