force-app/main/default/objects/Job__c/fields/Partial_Score__c.field-meta.xml
<CustomField>
    <fullName>Partial_Score__c</fullName>
    <description>The Partial Score on Job level is used to calculate the Weighted Score on Job level and then the Actively Hiring Score on Account level. RO-2536</description>
    <formula>Null</formula>
    <label>Legacy Partial Score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>