force-app/main/default/objects/Job__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <inlineHelpText>Plattform, auf der diese Stelle veröffentlicht wird</inlineHelpText>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>stepstone.de</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>