force-app/main/default/objects/Job__c/fields/Platform_Score__c.field-meta.xml
<CustomField>
    <fullName>Platform_Score__c</fullName>
    <description>The Platform Score on Job level is used to calculate the Weighted Score on Job level and then the Actively Hiring Score on Account level. RO-2536</description>
    <formula>IF(
INCLUDES(Platform__c, &quot;Stepstone&quot;) || INCLUDES(Platform__c, &quot;Indeed&quot;) ,
1,
IF(
NOT( INCLUDES(Platform__c, &quot;HeyJobs&quot;) ) &amp;&amp; NOT( INCLUDES(Platform__c, &quot;Other&quot;) ) &amp;&amp; NOT( ISBLANK( Platform__c) ) ,
0.75,
0
)
)
* 0.15</formula>
    <label>Platform Score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>