force-app/main/default/objects/Job__c/fields/Published_At__c.field-meta.xml
<CustomField>
    <fullName>Published_At__c</fullName>
    <description>\</description>
    <inlineHelpText>Zeitstempel, wann die Stelle zuletzt gemäß der job_source gesehen wurde</inlineHelpText>
    <label>Published At</label>
    <type>DateTime</type>
</CustomField>