force-app/main/default/objects/Job__c/fields/Recency_Score__c.field-meta.xml
<CustomField>
    <fullName>Recency_Score__c</fullName>
    <description>The Recency Score on Job level is used to calculate the Weighted Score on Job level and then the Actively Hiring Score on Account level. RO-2536</description>
    <formula>MAX (0, 1 - (( TODAY() - DATEVALUE(Published_At__c ) ) / 365 ) ) * 0.35</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recency Score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>