force-app/main/default/objects/Job__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field established the link between job and the respective recruiter found for this job.</description>
    <inlineHelpText>This field established the link between job and the respective recruiter found for this job.</inlineHelpText>
    <label>Recruiter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>