force-app/main/default/objects/Job__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>Details über die Quellen dieses Stellendatensatzes. Derzeit sind drei mögliche Quellen vorhanden - Index, Inventory und Jobboerse</inlineHelpText>
    <label>Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ats</fullName>
            </value>
            <value>
                <fullName>heyjobs</fullName>
            </value>
            <value>
                <fullName>jobboerse</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
            <value>
                <fullName>stepstone</fullName>
            </value>
            <value>
                <fullName>stepstone - partner</fullName>
            </value>
            <value>
                <fullName>jobfeed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>