force-app/main/default/objects/Job__c/fields/Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Score__c</fullName>
    <description>The Weighted Score on Job level is used to calculate the Actively Hiring Score on Account level. RO-2536</description>
    <formula>MIN( 100 , MAX (1, (Recency_Score__c + Partial_Score__c + Platform_Score__c ) * 100 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>