force-app/main/default/objects/Job__c/fields/ZIP_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Code__c</fullName>
    <inlineHelpText>Postleitzahl des Arbeitsorts</inlineHelpText>
    <label>ZIP Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>